--- a/crates/mooncake/Cargo.toml
+++ b/crates/mooncake/Cargo.toml
@@ -46,7 +46,7 @@ indexmap.workspace = true
 petgraph.workspace = true
 thiserror.workspace = true
 dunce.workspace = true
-git2 = "0.19.0"
+git2 = { version = "0.19.0", optional = true }
 url = "2.5.2"
 
 [dev-dependencies]
@@ -54,3 +54,7 @@ expect-test.workspace = true
 test-log.workspace = true
 tempfile.workspace = true
 copy_dir = "0.1.3"
+
+[features]
+default = []
+libgit2 = ["git2"]
