--- a/crates/moonbuild/Cargo.toml
+++ b/crates/moonbuild/Cargo.toml
@@ -65,6 +65,8 @@ rand.workspace = true
 json-structural-diff = { version = "0.1.0", features = ["colorize"] }
 base64.workspace = true
 shlex.workspace = true
+serde_json.workspace = true
+regex.workspace = true
 
 [dev-dependencies]
 expect-test.workspace = true
