--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@
 # For inquiries, you can contact us via e-mail at jichuruanjian@idea.edu.cn.
 
 [workspace]
-members = ["xtask", "./crates/*"]
+members = ["xtask", "./crates/*", "crates/moonbuild-rupes-recta"]
 resolver = "2"
 default-members = ["./crates/*"]
 
@@ -101,6 +101,7 @@ once_cell = "1.20.3"
 derive_builder = "0.20.2"
 pulldown-cmark = "0.13.0"
 shlex = "1.3.0"
+relative-path = "2.0.1"
 slotmap = "1.0.7"
 
 [profile.release]
