--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ rust-version = "1.80"
 edition = "2021"
 
 [workspace.dependencies]
+arcstr = "1.2"
 n2 = { git = "https://github.com/moonbitlang/n2.git", rev = "3e74c796d177f7ee6d9bb3ce6c400060fc50e24d" }
 moonbuild = { path = "./crates/moonbuild", version = "*" }
 mooncake = { path = "./crates/mooncake", version = "*" }
