feat: support moon test single .mbt & .mbt.md

--- a/crates/moon/Cargo.toml
+++ b/crates/moon/Cargo.toml
@@ -51,6 +51,7 @@ tokio.workspace = true
 futures.workspace = true
 clap_complete.workspace = true
 indexmap.workspace = true
+petgraph.workspace = true
 
 [target.'cfg(not(windows))'.dependencies]
 openssl = { version = "0.10.66", features = ["vendored"] }
