internal: quote in CommandBuilder

--- a/crates/moonbuild/Cargo.toml
+++ b/crates/moonbuild/Cargo.toml
@@ -64,6 +64,7 @@ thiserror.workspace = true
 rand.workspace = true
 json-structural-diff = { version = "0.1.0", features = ["colorize"] }
 base64.workspace = true
+shlex.workspace = true
 
 [dev-dependencies]
 expect-test.workspace = true
