--- a/Cargo.toml
+++ b/Cargo.toml
@@ -97,6 +97,7 @@ rand = "0.8.5"
 base64 = "0.22.1"
 once_cell = "1.20.3"
 derive_builder = "0.20.2"
+pulldown-cmark = "0.13.0"
 shlex = "1.3.0"
 
 [profile.release]
