--- a/crates/moonutil/Cargo.toml
+++ b/crates/moonutil/Cargo.toml
@@ -50,6 +50,7 @@ which.workspace = true
 regex.workspace = true
 once_cell.workspace = true
 derive_builder.workspace = true
+pulldown-cmark.workspace = true
 
 [dev-dependencies]
 expect-test.workspace = true
