--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,6 +52,7 @@ petgraph = { version = "0.6.4", features = [
 serde = { version = "1.0.163", features = ["derive"] }
 serde_json = { version = "1.0.97", features = ["preserve_order"] }
 serde_json_lenient = { version = "0.2.1", features = ["preserve_order"] }
+serde_yaml = "0.9.33"
 sysinfo = "0.29.9"
 tokio = { version = "1.34.0", features = [
     "rt-multi-thread",
