--- a/crates/moonutil/Cargo.toml
+++ b/crates/moonutil/Cargo.toml
@@ -51,6 +51,7 @@ regex.workspace = true
 once_cell.workspace = true
 derive_builder.workspace = true
 pulldown-cmark.workspace = true
+serde_yaml.workspace = true
 
 [dev-dependencies]
 expect-test.workspace = true
