minor: run moon update

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -189,6 +189,10 @@ jobs:
         if: ${{ matrix.os == 'windows-latest' }}
         run: cargo run --bin moon bundle --source-dir "$env:USERPROFILE\.moon\lib\core" --all
 
+      - name: moon update
+        run: |
+          cargo run --bin moon update
+
       - name: Run tests
         run: cargo test
 
@@ -298,6 +302,10 @@ jobs:
       - name: Bundle core (Windows)
         if: ${{ matrix.os == 'windows-latest' }}
         run: cargo run --bin moon bundle --source-dir "$env:USERPROFILE\.moon\lib\core" --all
+
+      - name: moon update
+        run: |
+          cargo run --bin moon update
 
       - name: Run tests
         run: cargo test
