--- a/crates/mooncake/Cargo.toml
+++ b/crates/mooncake/Cargo.toml
@@ -25,6 +25,7 @@ rust-version.workspace = true
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+arcstr.workspace = true
 moonutil.workspace = true
 serde.workspace = true
 serde_json.workspace = true
