--- a/Cargo.toml
+++ b/Cargo.toml
@@ -100,6 +100,7 @@ once_cell = "1.20.3"
 derive_builder = "0.20.2"
 pulldown-cmark = "0.13.0"
 shlex = "1.3.0"
+slotmap = "1.0.7"
 
 [profile.release]
 debug = false
