--- a/crates/moon/Cargo.toml
+++ b/crates/moon/Cargo.toml
@@ -30,6 +30,7 @@ rust-version.workspace = true
 moonbuild.workspace = true
 mooncake.workspace = true
 moonutil.workspace = true
+moonbuild-rupes-recta.workspace = true
 n2.workspace = true
 semver.workspace = true
 clap.workspace = true
