test: Prune workflow to macos only

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,92 +34,16 @@ env:
   CARGO_TARPAULIN_VERSION: 0.30.0
 
 jobs:
-  CCAA-check:
-    runs-on: ubuntu-latest
-    if: github.event_name == 'pull_request'
-    outputs:
-      CCAA-signed: ${{ steps.CCAA-check-step.outputs.CCAA-signed }}
-    steps:
-      - uses: actions/checkout@v4
-      - name: CCAA check
-        id: CCAA-check-step
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          PR_AUTHOR=$(curl -s -H "Authorization: token $GITHUB_TOKEN" \
-          https://api.github.com/repos/${{ github.repository }}/pulls/${{ github.event.number }} \
-          | jq -r '.user.login')
-          echo "The PR author is $PR_AUTHOR"
-          EMAIL=$(git log -1 --pretty=format:'%ae')
-          echo "Commit author email: $EMAIL"
-          CCAA_RESPONSE=$(curl -s "https://mooncakes.io/api/v0/cla/check_with_repo?gh_username=$PR_AUTHOR&repo=moon&email=$EMAIL")
-          echo "CCAA check response: $CCAA_RESPONSE"
-          SIGNED=$(echo $CCAA_RESPONSE | jq -r '.signed')
-          echo "CCAA-signed=$SIGNED" >> $GITHUB_ENV
-          echo "If you have any questions about the CCAA result, please contact us."
-          if [ "$SIGNED" != "true" ]; then
-            echo "CCAA is not signed. Please read the document at https://github.com/moonbitlang/moon/tree/main/docs/dev"
-            exit 1
-          else
-            echo "CCAA is signed."
-          fi
-
-  license-header-check:
-    name: license header check
-    runs-on: ubuntu-latest
-    env:
-      HAWKEYE_VERSION: v5.6.0
-    steps:
-      - uses: actions/checkout@v4
-      - name: Download HawkEye
-        run: curl --proto '=https' --tlsv1.2 -LsSf https://github.com/korandoru/hawkeye/releases/download/$HAWKEYE_VERSION/hawkeye-installer.sh | sh
-      - name: License Header Check
-        run: hawkeye check
-
-  typo-check:
-    name: typo-check
-    runs-on: ubuntu-latest
-    timeout-minutes: 10
-    env:
-      FORCE_COLOR: 1
-      TYPOS_VERSION: v1.18.0
-    steps:
-      - name: download typos
-        run: curl -LsSf https://github.com/crate-ci/typos/releases/download/$TYPOS_VERSION/typos-$TYPOS_VERSION-x86_64-unknown-linux-musl.tar.gz | tar zxf - -C ${CARGO_HOME:-~/.cargo}/bin
-      - name: Checkout repository
-        uses: actions/checkout@v4
-        with:
-          ref: ${{ github.event.pull_request.head.sha }}
-      - name: check for typos
-        run: typos
-
-  mdbook-check:
-    name: mdBook Check
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Setup mdBook
-        uses: peaceiris/actions-mdbook@v2
-        with:
-          mdbook-version: 'latest'
-
-      - name: Build and Check mdBook
-        run: |
-          mdbook build docs/manual
-          mdbook build docs/manual-zh
-
   bleeding-test:
     needs: [typo-check, license-header-check]
     strategy:
       fail-fast: false
       matrix:
         os:
-          - ubuntu-latest
+          # - ubuntu-latest
           - macos-latest
           - macos-13
-          - windows-latest
+          # - windows-latest
     runs-on: ${{ matrix.os }}
     steps:
       - name: Configure git
@@ -193,16 +117,6 @@ jobs:
         run: |
           cargo run --bin moon update
 
-      - name: Run tests
-        run: cargo test
-
-      - name: Check format
-        if: matrix.os == 'ubuntu-latest'
-        run: cargo fmt -- --check
-      - name: Clippy
-        if: matrix.os == 'ubuntu-latest'
-        run: cargo clippy --all-targets --all-features -- -D warnings
-
       - name: Test core (Unix)
         if: ${{ matrix.os != 'windows-latest' }}
         run: |
@@ -239,163 +153,3 @@ jobs:
         run: |
           cargo run --bin moon test --source-dir ~/.moon/lib/core --target llvm
           cargo run --bin moon test --source-dir ~/.moon/lib/core --target llvm --release
-
-  stable-test:
-    needs: [typo-check, license-header-check]
-    strategy:
-      fail-fast: false
-      matrix:
-        os:
-          - ubuntu-latest
-          - macos-latest
-          - macos-13
-          - windows-latest
-    runs-on: ${{ matrix.os }}
-    steps:
-      - name: Configure git
-        run: git config --global core.autocrlf false
-
-      - uses: actions/checkout@v4
-        with:
-          submodules: true
-
-      - uses: dtolnay/rust-toolchain@1.80.0
-        with:
-          components: rustfmt, clippy
-      - name: Cargo cache
-        uses: actions/cache@v4
-        with:
-          key: ${{ runner.os }}-cargo-${{ hashFiles('Cargo.lock') }}
-          path: ~/.cargo/registry
-
-      - name: install MoonBit(Unix)
-        if: ${{ matrix.os != 'windows-latest' }}
-        run: |
-          curl -fsSL https://cli.moonbitlang.com/install/unix.sh | bash
-          echo "$HOME/.moon/bin" >> $GITHUB_PATH
-
-      - name: install MoonBit(Windows)
-        if: ${{ matrix.os == 'windows-latest' }}
-        run: |
-          Set-ExecutionPolicy RemoteSigned -Scope CurrentUser; irm https://cli.moonbitlang.com/install/powershell.ps1 | iex
-          "C:\Users\runneradmin\.moon\bin" | Out-File -FilePath $env:GITHUB_PATH -Append
-
-      - name: Setup MSVC
-        if: ${{ matrix.os == 'windows-latest' }}
-        uses: ilammy/msvc-dev-cmd@v1
-
-      - name: Build
-        run: cargo build
-
-      - name: Set built binary to PATH (Unix)
-        if: ${{ matrix.os != 'windows-latest' }}
-        run: echo "$GITHUB_WORKSPACE/target/debug" >> $GITHUB_PATH
-      - name: Set built binary to PATH (Windows)
-        if: ${{ matrix.os == 'windows-latest' }}
-        run: Add-Content $env:GITHUB_PATH "$env:GITHUB_WORKSPACE\target\debug"
-
-      - name: Versions
-        run: cargo run --bin moon version --all
-      - name: Bundle core (Unix)
-        if: ${{ matrix.os != 'windows-latest' }}
-        run: cargo run --bin moon bundle --source-dir ~/.moon/lib/core --all
-      - name: Bundle core (Windows)
-        if: ${{ matrix.os == 'windows-latest' }}
-        run: cargo run --bin moon bundle --source-dir "$env:USERPROFILE\.moon\lib\core" --all
-
-      - name: moon update
-        run: |
-          cargo run --bin moon update
-
-      - name: Run tests
-        run: cargo test
-
-      - name: Check format
-        if: matrix.os == 'ubuntu-latest'
-        run: cargo fmt -- --check
-      - name: Clippy
-        if: matrix.os == 'ubuntu-latest'
-        run: cargo clippy --all-targets --all-features -- -D warnings
-
-      - name: Test core (Unix)
-        if: ${{ matrix.os != 'windows-latest' }}
-        run: |
-          cargo run --bin moon test --source-dir ~/.moon/lib/core --target wasm-gc
-          cargo run --bin moon test --source-dir ~/.moon/lib/core --target js
-          cargo run --bin moon test --source-dir ~/.moon/lib/core --target wasm
-          cargo run --bin moon test --source-dir ~/.moon/lib/core --target native
-          cargo run --bin moon test --source-dir ~/.moon/lib/core --release --target wasm-gc
-          cargo run --bin moon test --source-dir ~/.moon/lib/core --release --target js
-          cargo run --bin moon test --source-dir ~/.moon/lib/core --release --target wasm
-          cargo run --bin moon test --source-dir ~/.moon/lib/core --release --target native
-          cargo run --bin moon test --source-dir ~/.moon/lib/core --doc
-      - name: Test core (Windows)
-        if: ${{ matrix.os == 'windows-latest' }}
-        run: |
-          cargo run --bin moon test --source-dir "$env:USERPROFILE\.moon\lib\core" --target wasm-gc
-          cargo run --bin moon test --source-dir "$env:USERPROFILE\.moon\lib\core" --target js
-          cargo run --bin moon test --source-dir "$env:USERPROFILE\.moon\lib\core" --target wasm
-          cargo run --bin moon test --source-dir "$env:USERPROFILE\.moon\lib\core" --target native
-          cargo run --bin moon test --source-dir "$env:USERPROFILE\.moon\lib\core" --release --target wasm-gc
-          cargo run --bin moon test --source-dir "$env:USERPROFILE\.moon\lib\core" --release --target js
-          cargo run --bin moon test --source-dir "$env:USERPROFILE\.moon\lib\core" --release --target wasm
-          cargo run --bin moon test --source-dir "$env:USERPROFILE\.moon\lib\core" --release --target native
-          cargo run --bin moon test --source-dir "$env:USERPROFILE\.moon\lib\core" --doc
-
-  # coverage:
-  #   needs: bleeding-test
-  #   runs-on: macos-latest
-  #   steps:
-  #     - name: Checkout repository
-  #       uses: actions/checkout@v4
-  #       with:
-  #         submodules: true
-
-  #     - uses: dtolnay/rust-toolchain@1.80.0
-
-  #     - name: Checkout moonc-version
-  #       uses: actions/checkout@v4
-  #       with:
-  #         ref: moonc-version-dont-delete
-  #         path: moonc-version-dont-delete
-  #     - name: Copy moonc-version file to workspace
-  #       run: |
-  #         cp moonc-version-dont-delete/moonc-version .
-
-  #     - name: install MoonBit(Unix)
-  #       run: |
-  #         curl https://cli.moonbitlang.com/moon-ci/$(uname -s)-$(uname -m).tar.gz --output moonbit.tar.gz
-  #         mkdir -p ~/.moon/bin
-  #         mkdir -p ~/.moon/lib
-  #         tar xf moonbit.tar.gz --directory ~/.moon/
-  #         curl https://cli.moonbitlang.com/moon-ci/$(uname -s)-$(uname -m)/moonrun --output ~/.moon/bin/moonrun
-  #         curl https://cli.moonbitlang.com/moon-ci/$(uname -s)-$(uname -m)/mooncake --output ~/.moon/bin/mooncake
-  #         chmod +x ~/.moon/bin/moon*
-  #         chmod +x ~/.moon/bin/internal/tcc
-  #         git clone --depth 1 https://github.com/moonbitlang/core.git ~/.moon/lib/core
-  #         echo "$HOME/.moon/bin" >> $GITHUB_PATH
-  #         echo "$GITHUB_WORKSPACE/target/debug" >> $GITHUB_PATH
-
-  #     - name: install cargo-tarpaulin ${{ env.CARGO_TARPAULIN_VERSION }}
-  #       run: |
-  #         cd "${CARGO_HOME}/bin"
-  #         curl -sL https://github.com/xd009642/tarpaulin/releases/download/${CARGO_TARPAULIN_VERSION}/cargo-tarpaulin-aarch64-apple-darwin.tar.gz | tar zxf - -C ${CARGO_HOME:-~/.cargo}/bin
-
-  #     - name: Build
-  #       run: cargo build
-  #     - name: Set built binary to PATH (Unix)
-  #       run: echo "$GITHUB_WORKSPACE/target/debug" >> $GITHUB_PATH
-  #     - name: Versions
-  #       run: cargo run --bin moon version --all
-  #     - name: Bundle core (Unix)
-  #       run: cargo run --bin moon bundle --source-dir ~/.moon/lib/core --all
-
-  #     - name: Generate code coverage
-  #       run: cargo tarpaulin --ignore-tests --out Xml
-
-  #     - name: Upload coverage reports to Codecov
-  #       if: github.ref == 'refs/heads/main'
-  #       uses: codecov/codecov-action@v4.0.1
-  #       with:
-  #         token: ${{secrets.CODECOV_TOKEN}}
-  #         fail_ci_if_error: true
