feat(rr): Build artifact inspection, `moon run` running support

--- a/crates/moon/Cargo.toml
+++ b/crates/moon/Cargo.toml
@@ -48,7 +48,7 @@ chrono.workspace = true
 env_logger.workspace = true
 log.workspace = true
 walkdir.workspace = true
-tokio.workspace = true
+tokio = { workspace = true, features = ["rt"] }
 futures.workspace = true
 clap_complete.workspace = true
 indexmap.workspace = true
