--- a/Cargo.toml
+++ b/Cargo.toml
@@ -61,6 +61,7 @@ tokio = { version = "1.34.0", features = [
     "macros",
     "signal",
     "process",
+    "io-std",
 ] }
 walkdir = "2.5.0"
 which = "6.0.1"
