feat(rr): Initial test running

--- a/crates/moon/Cargo.toml
+++ b/crates/moon/Cargo.toml
@@ -53,6 +53,7 @@ futures.workspace = true
 clap_complete.workspace = true
 indexmap.workspace = true
 petgraph.workspace = true
+rand.workspace = true
 
 [target.'cfg(not(windows))'.dependencies]
 openssl = { version = "0.10.66", features = ["vendored"] }
