--- a/crates/moon/Cargo.toml
+++ b/crates/moon/Cargo.toml
@@ -54,6 +54,7 @@ clap_complete.workspace = true
 indexmap.workspace = true
 petgraph.workspace = true
 rand.workspace = true
+tempfile.workspace = true
 
 [target.'cfg(not(windows))'.dependencies]
 openssl = { version = "0.10.66", features = ["vendored"] }
