refactor,feat(rr): Add support for dry run

--- a/crates/moon/Cargo.toml
+++ b/crates/moon/Cargo.toml
@@ -55,6 +55,7 @@ indexmap.workspace = true
 petgraph.workspace = true
 rand.workspace = true
 tempfile.workspace = true
+shlex.workspace = true
 
 [target.'cfg(not(windows))'.dependencies]
 openssl = { version = "0.10.66", features = ["vendored"] }
