feat(rr): Add release build layout support

--- a/crates/moonbuild-rupes-recta/Cargo.toml
+++ b/crates/moonbuild-rupes-recta/Cargo.toml
@@ -38,3 +38,4 @@ walkdir.workspace = true
 petgraph.workspace = true
 indexmap.workspace = true
 shlex.workspace = true
+derive_builder.workspace = true
