--- a/crates/moon/Cargo.toml
+++ b/crates/moon/Cargo.toml
@@ -56,6 +56,7 @@ petgraph.workspace = true
 rand.workspace = true
 tempfile.workspace = true
 shlex.workspace = true
+derive_builder.workspace = true
 
 [target.'cfg(not(windows))'.dependencies]
 openssl = { version = "0.10.66", features = ["vendored"] }
