--- a/Cargo.toml
+++ b/Cargo.toml
@@ -105,6 +105,7 @@ pulldown-cmark = "0.13.0"
 shlex = "1.3.0"
 relative-path = "2.0.1"
 slotmap = "1.0.7"
+toml = "0.9.5"
 
 [profile.release]
 debug = false
