--- a/xtask/Cargo.toml
+++ b/xtask/Cargo.toml
@@ -33,5 +33,6 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 snapbox = "0.4.15"
 tempfile.workspace = true
+toml.workspace = true
 walkdir.workspace = true
 home.workspace = true
