--- a/Cargo.toml
+++ b/Cargo.toml
@@ -106,6 +106,7 @@ shlex = "1.3.0"
 relative-path = "2.0.1"
 slotmap = "1.0.7"
 toml = "0.9.5"
+smallvec = "1.15.1"
 
 [profile.release]
 debug = false
