--- a/Cargo.toml
+++ b/Cargo.toml
@@ -111,6 +111,7 @@ smallvec = "1.15.1"
 # Use tracing instead of log in the future
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter"] }
+tracing-chrome = "0.7.2"
 
 [profile.release]
 debug = false
