--- a/crates/moon/Cargo.toml
+++ b/crates/moon/Cargo.toml
@@ -60,6 +60,7 @@ smallvec.workspace = true
 
 tracing.workspace = true
 tracing-subscriber.workspace = true
+tracing-chrome.workspace = true
 
 [target.'cfg(not(windows))'.dependencies]
 openssl = { version = "0.10.66", features = ["vendored"] }
