--- a/crates/moonbuild-rupes-recta/Cargo.toml
+++ b/crates/moonbuild-rupes-recta/Cargo.toml
@@ -39,3 +39,4 @@ petgraph.workspace = true
 indexmap.workspace = true
 shlex.workspace = true
 derive_builder.workspace = true
+tracing.workspace = true
