--- a/crates/moonbuild-rupes-recta/Cargo.toml
+++ b/crates/moonbuild-rupes-recta/Cargo.toml
@@ -40,3 +40,5 @@ indexmap.workspace = true
 shlex.workspace = true
 derive_builder.workspace = true
 tracing.workspace = true
+
+aho-corasick = "1.1.3"
