fix: moon integration tests file copy should obey gitignore

--- a/crates/moon/Cargo.toml
+++ b/crates/moon/Cargo.toml
@@ -74,6 +74,7 @@ tempfile = "3.6.0"
 snapbox = "0.4.15"
 expect-test.workspace = true
 clap-markdown = "0.1.4"
+ignore = "0.4.23"
 
 [[bin]]
 name = "moon"
