--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,8 @@ on:
   pull_request:
     branches:
       - main
+  schedule:
+    - cron: "0 20 * * *"
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
