--- a/crates/moonbuild-rupes-recta/Cargo.toml
+++ b/crates/moonbuild-rupes-recta/Cargo.toml
@@ -43,5 +43,6 @@ indexmap.workspace = true
 shlex.workspace = true
 derive_builder.workspace = true
 tracing.workspace = true
+regex.workspace = true
 
 aho-corasick = "1.1.3"
