refactor(legacy): Move watcher code to `moon`

--- a/crates/moon/Cargo.toml
+++ b/crates/moon/Cargo.toml
@@ -58,6 +58,8 @@ shlex.workspace = true
 derive_builder.workspace = true
 smallvec.workspace = true
 
+notify.workspace = true
+
 tracing.workspace = true
 tracing-subscriber.workspace = true
 tracing-chrome.workspace = true
