fix: Fix before edition change

--- a/crates/moonbuild/Cargo.toml
+++ b/crates/moonbuild/Cargo.toml
@@ -69,7 +69,7 @@ serde_json.workspace = true
 regex.workspace = true
 ariadne.workspace = true
 handlebars = { version = "6.3.2", default-features = false }
-toml = { workspace = true, default-features = false, features = [
+toml = { workspace = true, features = [
     "parse",
     "serde",
     "std",
