--- a/crates/moonbuild/Cargo.toml
+++ b/crates/moonbuild/Cargo.toml
@@ -40,7 +40,7 @@ petgraph.workspace = true
 walkdir.workspace = true
 tempfile.workspace = true
 ctrlc.workspace = true
-dissimilar.workspace = true
+similar = { version = "2.7.0", features = ["inline"] }
 line-index.workspace = true
 which.workspace = true
 home.workspace = true
@@ -69,11 +69,7 @@ serde_json.workspace = true
 regex.workspace = true
 ariadne.workspace = true
 handlebars = { version = "6.3.2", default-features = false }
-toml = { workspace = true, features = [
-    "parse",
-    "serde",
-    "std",
-] }
+toml = { workspace = true, features = ["parse", "serde", "std"] }
 
 [dev-dependencies]
 expect-test.workspace = true
