--- a/crates/moon/Cargo.toml
+++ b/crates/moon/Cargo.toml
@@ -31,6 +31,8 @@ moonbuild.workspace = true
 mooncake.workspace = true
 moonutil.workspace = true
 moonbuild-rupes-recta.workspace = true
+moonbuild-debug.workspace = true
+
 n2.workspace = true
 semver.workspace = true
 clap.workspace = true
