chore: Add unstable flag of dump build graph

--- a/crates/moonbuild-debug/Cargo.toml
+++ b/crates/moonbuild-debug/Cargo.toml
@@ -23,3 +23,8 @@ rust-version.workspace = true
 edition.workspace = true
 
 [dependencies]
+
+anyhow.workspace = true
+n2.workspace = true
+serde.workspace = true
+serde_json.workspace = true
