--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,11 +48,15 @@ expect-test = "1.5.0"
 futures = { version = "0.3.29", features = ["std"], default-features = false }
 indexmap = { version = "2.2.6", features = ["serde"] }
 notify = "6.1.1"
-reqwest = { version = "0.11.22", features = [
+reqwest = { version = "0.12.24", default-features = false, features = [
     "multipart",
     "blocking",
     "json",
     "stream",
+    "rustls-tls",
+    "charset",
+    "http2",
+    "system-proxy",
 ] }
 petgraph = { version = "0.6.4", features = [
     "graphmap",
