fix: Block SIGCHLD on child process spawning

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -108,6 +108,8 @@ slotmap = "1.0.7"
 toml = "0.9.5"
 smallvec = "1.15.1"
 
+libc = "0.2.177"
+
 # Use tracing instead of log in the future
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter"] }
