--- a/crates/moonutil/Cargo.toml
+++ b/crates/moonutil/Cargo.toml
@@ -55,6 +55,9 @@ pulldown-cmark.workspace = true
 serde_yaml.workspace = true
 slotmap.workspace = true
 
+[target."cfg(unix)".dependencies]
+libc.workspace = true
+
 [dev-dependencies]
 expect-test.workspace = true
 
