--- a/xtask/Cargo.toml
+++ b/xtask/Cargo.toml
@@ -35,4 +35,5 @@ snapbox = "0.4.15"
 tempfile.workspace = true
 toml.workspace = true
 walkdir.workspace = true
+which.workspace = true
 home.workspace = true
